--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">Fabbrimarine</a>
+            <a href="index.html" class="logo"><img src="images/logo.png" alt="Fabbrimarine" style="height: 50px; width: auto;"></a>
             <button class="menu-toggle">☰</button>
             <ul class="nav-links">
                 <li><a href="index.html">Početna</a></li>
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <section class="hero" style="background-image: linear-gradient(rgba(0, 102, 204, 0.7), rgba(0, 68, 153, 0.7)), url('images/hero-bg.jpg'); background-size: cover; background-position: center;">
+    <section class="hero" style="background-image: linear-gradient(rgba(0, 102, 204, 0.6), rgba(0, 68, 153, 0.6)), url('images/hero-marine.jpg'); background-size: cover; background-position: center;">
         <h1>Sve je počelo u moru</h1>
         <p>Čovečanstvo potiče iz mora. Baš kao i naša kozmetika.</p>
     </section>
@@ -42,7 +42,7 @@
 
         <section class="categories">
             <a href="face.html" class="category-card">
-                <img src="images/product-perfectio.jpg" alt="Nega lica" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
+                <img src="images/face-perfectio.jpg" alt="Nega lica" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Nega Lica</h3>
                 <p>
                     Specijalizovana linija proizvoda za negu lica koja obuhvata anti-age tretmane, 
@@ -52,7 +52,7 @@
             </a>
 
             <a href="body.html" class="category-card">
-                <img src="images/product-chronocare.jpg" alt="Nega tela" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
+                <img src="images/body-chronocare.jpg" alt="Nega tela" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Nega Tela</h3>
                 <p>
                     Kompletan program za negu tela koji uključuje anti-celulit tretmane, toniranje, 
@@ -65,10 +65,24 @@
 
     <footer>
         <div class="footer-content">
-            <p><strong>Fabbri Cosmetica srl</strong></p>
-            <p>Via Liguria, 2/2-3-4 • 40064 Ozzano Dell'Emilia (BO), Italija</p>
-            <p>Tel: (+39) 051 796 014</p>
-            <p>P.IVA: 02799891201</p>
+            <p><strong>ALVITA PRO</strong></p>
+            <p>Uvoznik i generalni distributer za italijansku kozmetiku Fabbrimarine</p>
+            <p>GOČKA 43 • 11090, Beograd, Srbija</p>
+            <p>Tel: 065/981-94-80 • 060/480-42-70 • 061/188-23-75</p>
+            <p>Email: maksimovicpredrag141@gmail.com</p>
+            <div class="footer-social">
+                <a href="https://www.instagram.com/alvita_pro/" target="_blank" class="footer-social-link">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                    </svg>
+                </a>
+                <a href="https://www.facebook.com/predrag.maksimovic.3956" target="_blank" class="footer-social-link">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                    </svg>
+                </a>
+            </div>
+            <p>PIB: 114574542 • MB: 67686179</p>
         </div>
     </footer>
 
