fix(koza): adapt content and images

--- a/body.html
+++ b/body.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Početna</a></li>
                 <li><a href="face.html">Nega Lica</a></li>
                 <li><a href="body.html">Nega Tela</a></li>
+                <li><a href="wellness.html">Wellness i Spa</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
