--- a/face.html
+++ b/face.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Početna</a></li>
                 <li><a href="face.html">Nega Lica</a></li>
                 <li><a href="body.html">Nega Tela</a></li>
+                <li><a href="wellness.html">Wellness i Spa</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
@@ -25,102 +26,76 @@
         <p class="page-subtitle">Specijalizovani proizvodi za negu lica prilagođeni vašem tipu kože</p>
 
         <div class="product-categories">
+            <!-- Anti-age with 3 images -->
             <div class="product-category">
-                <img src="images/face-perfectio.jpg" alt="Anti-age" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Anti-age</h3>
+                <div class="category-images">
+                    <img src="images/face-csi.jpg" alt="Anti-age 1">
+                    <img src="images/face-chronocare.jpg" alt="Anti-age 2">
+                    <img src="images/face-lifting.jpg" alt="Anti-age 3">
+                </div>
                 <p>
                     Napredni anti-age tretmani koji smanjuju pojavu bora, poboljšavaju elastičnost kože 
                     i vraćaju mladalački sjaj. Formulirani sa morskim sastojcima koji stimulišu produkciju kolagena.
                 </p>
+                <p class="ingredient">Sastojci: Ulje semena makadamije, terni folije, fotozoma morskog DNA</p>
+                <p>Blagi, hipoalergeni proizvodi dizajnirani posebno za osetljivu kožu. Bez parfema i agresivnih sastojaka, sa morskim ekstraktima koji smiruju i regenerišu.</p>
+                <p class="ingredient">Sastojci: Fruktoza, glukoza, hibiskus, hidrolizovani protein kvasca, plankton</p>
+                <p>Lifting efekat koji zateže i podiže konture lica. Napredne formule koje poboljšavaju tonus kože i vraćaju definisanost linijama lica.</p>
+                <p class="ingredient">Sastojci: hijealuronska kilesilna, vitamin E, esencijalne amino kiseline, hirdlizovani kvasac, proteini, lecitin</p>
             </div>
-
             <div class="product-category">
-                <img src="images/face-rivitalizzante.jpg" alt="Suva koža" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Suva koža</h3>
-                <p>
-                    Intenzivna hidratacija za suvu kožu koja traži dodatnu negu. Naši proizvodi obnavljaju 
-                    prirodnu barijeru kože i pružaju dugotrajnu hidrataciju.
-                </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-csi.jpg" alt="Osetljiva koža" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Osetljiva koža</h3>
-                <p>
-                    Blagi, hipoalergeni proizvodi dizajnirani posebno za osetljivu kožu. Bez parfema i 
-                    agresivnih sastojaka, sa morskim ekstraktima koji smiruju i regenerišu.
-                </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-xx.jpg" alt="Masna i problematična koža" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Masna i problematična koža</h3>
-                <p>
-                    Proizvodi koji regulišu lučenje sebuma, sužavaju pore i sprečavaju nastanak akni. 
-                    Lagane formule koje ne zasićuju kožu.
-                </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-chronocare.jpg" alt="Normalna i kombinovana koža" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Normalna i kombinovana koža</h3>
+                <div class="category-images">
+                    <img src="images/face-koza-sjaj.jpg" alt="Normalna i kombinovana koža 1">
+                    <img src="images/face-masna-koza.jpg" alt="Normalna i kombinovana koža 2">
+                    <img src="images/face-suva-koza.jpg" alt="Normalna i kombinovana koža 3">
+                    <img src="images/face-revitalizacija.jpg" alt="Normalna i kombinovana koža 4">
+                    <img src="images/koza-normalna.jpg" alt="Normalna i kombinovana koža 5">
+                    <img src="images/face-podrucje-oko-ociju.webp" alt="Normalna i kombinovana koža 6">
+                </div>
+                <h4>Revitalizacija</h4>
                 <p>
-                    Uravnotežena negu za normalnu i kombinovanu kožu koja održava prirodnu ravnotežu 
-                    i zdrav izgled kože.
+                    Hidratantna emulzija specijalno stvorena za zrelu kožu, bogata morskim funkcionalnim supstancama sa osmotskim efektima (Plankton i Ulva Lactuca). Ponovo uspostavlja nivo hidratacije i poboljšava elastičnost tkiva.
                 </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-csi.jpg" alt="Nega područja oko očiju" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Nega područja oko očiju</h3>
-                <p>
-                    Specijalizovani tretmani za delikatnu kožu oko očiju. Smanjuju tamne kruge, 
-                    otoke i fine linije, vraćajući mladalački izgled očima.
+                <p class="ingredient">
+                    Sastojci: Plankton, Ulva Lactuca, Morski kolagen, Morska trava, Secerna salata, Alge
                 </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-xx.jpg" alt="Posvetljivanje" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Posvetljivanje</h3>
+                <h4>Za sjaj</h4>
                 <p>
-                    Proizvodi za ujednačavanje tena i posvetljivanje kože. Bezbedno uklanjaju 
-                    pigmentne fleke i vraćaju prirodni sjaj koži.
+                    Koži vraća svoj prirodni sjaj. Budite intenzivno hidrirani u svakoj prilici. Deluje na promene, boje i mrlje na koži. Povećavajući izgled ujednačenog tena, svetliju i blistaviju kožu. Učvršćuje i poboljšava teksturu kože. Sadrži filtere za zaštitu od preteranog apsorbovanja sunčevih zraka.
                 </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-rivitalizzante.jpg" alt="Super hidratacija" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Super hidratacija</h3>
-                <p>
-                    Intenzivni hidratantni tretmani sa morskim ekstraktima koji duboko prožimaju kožu, 
-                    ostavljajući je mekom, glatkom i zategnutom.
+                <p class="ingredient">
+                    Sastojci: Voda, pšenični protein, kolagen, spirulina, cimet, laminarija-mrka alga
                 </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-lifting.jpg" alt="Lifting" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Lifting</h3>
+                <h4>Za masnu</h4>
                 <p>
-                    Lifting efekat koji zateže i podiže konture lica. Napredne formule koje poboljšavaju 
-                    tonus kože i vraćaju definisanost linijama lica.
+                    Ukoliko imate masnu ili problematičnu kožu, ovaj set će vas iznenaditi. Njegova lagana i nežna tekstura ne zapušava pore, ekstrakti zelenih algi umiruju osipe. Tekstura svih proizvoda iz seta zadovoljava sve potrebe kože koja je sklona masnom sjaju.
                 </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-chronocare.jpg" alt="Priprema lica" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Priprema lica</h3>
-                <p>
-                    Proizvodi za pripremu kože pre nanošenja make-upa ili drugih tretmana. 
-                    Osiguravaju glatku, ravnomernu podlogu i dugotrajnu izdržljivost.
+                <p class="ingredient">
+                    Sastojci: plankton, morski kolagen, ekstrakt zelene salate kao različite vrste algi.
                 </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/face-xx.jpg" alt="Čišćenje" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Čišćenje</h3>
+                <h4>Suva</h4>
                 <p>
-                    Blagi ali efikasni proizvodi za čišćenje kože koji uklanjaju nečistoće, 
-                    make-up i višak sebuma, ostavljajući kožu čistom i svežom.
+                    Set namenjen za suvu kožu pruža intenzivnu hidrataciju i vraća koži mekoću i elastičnost.
+                    Takođe se preporučuje za osetljivu kožu sa iritacijama i crvenilom izazvanim promenom vremenskih uslova i zagadjenjem. Jača odbrambeni sistem kože zahvaljujući umirujućem delovanju i doprinosi rekonstrukciji gornjeg sloja kože - hidrolipidni film.
+                </p>
+                <p class="ingredient">
+                    Sastojci: Plankton, Marine Collagen, Morska salata, Secerna alga, Morska trava
+                </p>
+                <h4>Područje oko očiju</h4>
+                <p>
+                    Krema za područje oko ociju ima suštinski efekat dubinske hidratacije i smanjuje tanke linije i bore oko očiju, otklanja znakove umora i koži daje ujednačen i blistav ten.
+                </p>
+                <p class="ingredient">
+                    Sastojci: Smedje alge, Frakcije hijaluronske kiseline, Koloidna morska voda, Vinova loza
+                </p>
+                <h4>Normalna</h4>
+                <p>
+                    Nežna emulzija, nemasna, brzo se upija. Njeni aktivni sastojci igraju važnu antioksidativnu ulogu i pružaju izvanrednu hidrataciju, pogodna je za sve tipove kože koji deluju umorno i bezivotno.
+                </p>
+                <p class="ingredient">
+                    Sastojci: antioksidantski kompleks, hijealuronska kiselina, plankton, vitamin E, hitozan
                 </p>
             </div>
         </div>
