--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Početna</a></li>
                 <li><a href="face.html">Nega Lica</a></li>
                 <li><a href="body.html">Nega Tela</a></li>
+                <li><a href="wellness.html">Wellness i Spa</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
@@ -29,14 +30,14 @@
         <section class="philosophy">
             <h2>MORSKA FILOZOFIJA</h2>
             <p>
-                Naša filozofija je zasnovana na prirodi, dobrobiti i nauci. Koristimo morske sastojke 
-                i biomimetiku da kreiramo kozmetičke proizvode koji neguju i revitalizuju vašu kožu. 
-                Verujemo da priroda nudi najbolja rešenja za negu lica i tela, a naša naučna ekspertiza 
-                osigurava da svaki proizvod bude efikasan i siguran.
+                Fabbri Cosmetica je vodeća kompanija u sektoru usluga lepote i wellnesa sa četrdesetogodišnjim iskustvom.
+                Istraživači u farmakološkom sektoru hrane i kozmetike proučavaju morske aktivne supstance za rešavanje svih vrsta problema, svesni njihovog značaja kao izvora rešenja za zdravlje ljudi.
+                Sa dr. Albertom Fabbrijem projekat je rađen kao specijalizovan za morsku kozmetologiju sa posebnim akcentom na jedinstvene supstance iz mora i okeana. Formule su odobrene od strane najboljih centara za sertifikaciju, kao i od Svetske Zdravstvene Organizacije. Preparati sadrže 56 vrsta dobro poznatih algi i 5 vrsta planktona kao i biserni i crveni koralni prah, ekstrakte morskog ljiljana, retke plave morske alge, šargarepe, i voćne peptide tj. proteine.
+                Ono što izdvaja kozmetiku FABBRIMARINE je potpuno inovativna metoda biomimetike (prirodna imitacija okruženja ćelije), sadržaj mikro emulzije koja ulazi sama u kožu (npr. maske) kao i mikronizovanu morsku vodu koja vrši momentalno poboljšanje, kako epiderma tako i dubokih slojeva kože.
             </p>
+            <br />
             <p>
-                Marine biomimetika je način na koji priroda inspirše naše formule, omogućavajući nam 
-                da stvorimo proizvode koji rade u harmoniji sa vašom kožom.
+                <em>'ČOVEČANSTVO DOLAZI IZ MORA, BAŠ KAO I NAŠA KOZMETIKA.'</em>
             </p>
         </section>
 
@@ -59,6 +60,10 @@
                     drenažu, hidrataciju i zaštitu od sunca. Naši proizvodi pomažu u održavanju 
                     zdravlja i lepote vaše kože tokom cele godine.
                 </p>
+            </a>
+
+            <a href="wellness.html" class="category-card">
+                <h3>Wellness i Spa</h3>
             </a>
         </section>
     </main>
