fix(telo): adapt text, images and style for body page

--- a/body.html
+++ b/body.html
@@ -27,8 +27,11 @@
 
         <div class="product-categories">
             <div class="product-category">
-                <img src="images/body-sun.jpg" alt="Zaštita od sunca" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Zaštita od sunca</h3>
+                <div class="category-images">
+                    <img src="images/body-sun.jpg" alt="Zaštita od sunca 1">
+                    <img src="images/body-sun2.jpg" alt="Zaštita od sunca 2">
+                </div>
                 <p>
                     Visokokvalitetni sunčani filteri koji pružaju široku zaštitu od UVA i UVB zračenja. 
                     Formulirani sa morskim sastojcima koji neguju kožu tokom izlaganja suncu.
@@ -36,71 +39,68 @@
             </div>
 
             <div class="product-category">
-                <img src="images/body-thalasso.jpg" alt="Anti-celulit" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Anti-celulit</h3>
+                <div class="category-images">
+                    <img src="images/body-thalasso.jpg" alt="Anti-celulit 1">
+                    <img src="images/body-pena.jpg" alt="Anti-celulit 2">
+                    <img src="images/body-start.jpg" alt="Anti-celulit 3">
+                </div>
                 <p>
                     Efikasni tretmani za smanjenje pojave celulita. Kombinacija morskih ekstrakata i 
                     aktivnih sastojaka koji poboljšavaju mikrocirkulaciju i tonus kože.
                 </p>
+                <p class="ingredient">
+                    Sastojci: morska voda, bademovo ulje, alge, sitake, kvasac, semenke jojobe, pantenol, ulje grozdja, spirulina, ekstrakt ruzmarina, mentol
+                </p>
             </div>
 
             <div class="product-category">
-                <img src="images/body-algoil.jpg" alt="Lipolitički" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Lipolitički</h3>
+                <h3>Masaža i drenaža</h3>
+                <div class="category-images">
+                    <img src="images/body-algoil.jpg" alt="Masaža i drenaža 1">
+                    <img src="images/body-atomizovana-morska-voda.jpg" alt="Masaža i drenaža 2">
+                    <img src="images/body-nektar-od-algi.jpg" alt="Masaža i drenaža 3">
+                    <img src="images/body-pasteta-od-algi.jpg" alt="Masaža i drenaža 4">
+                    <img src="images/body-piling.jpg" alt="Masaža i drenaža 5">
+                </div>
                 <p>
                     Napredni lipolitički tretmani koji pomažu u redukciji masnih naslaga. 
                     Stimulišu prirodne procese sagorevanja masti i poboljšavaju konture tela.
                 </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/body-chronocare.jpg" alt="Toniranje" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Toniranje</h3>
+                <h4>Ulje od algi</h4>
                 <p>
-                    Proizvodi za toniranje i zatezanje kože tela. Poboljšavaju elastičnost i 
-                    definišu konture, ostavljajući kožu čvrstom i zategnutom.
+                    Mešavina biljnih ulja i ekstrakata algi sa odličnim hidratantnim, elastičnim i hraniljivim svojstvima. Različite karakteristike ulja igraju važnu regenerativnu ulogu, što koži donosi mekoću, elastičnost i sjaj.
+                </p>
+                <h4>Atomizovana morska voda</h4>
+                <p>
+                    Formulisana za osobe sa gojaznošću povezanom sa zadržavanjem vode. Moć mršavljenja kombinovana je sa intenzivnim drenažnim dejstvom koncentrovane mešavine morskih soli koje ciljaju zadržavanje tečnosti sa ultra brzim efektom "ispumpavanja".
+                </p>
+                <p class="ingredient">
+                    Sastojci: morska voda, spirulina, ekstrakt bilja gorke pomorandže, crvena i smedja alga
+                </p>
+                <h4>Nektar od morskih algi</h4>
+                <p>
+                    Čist, nepenušav koncentrat algi koji kombinuje hidratantna i remineralizujuća svojstva spiruline sa svojstvima laminarije za mršavljenje i toniranje.
+                </p>
+                <h4>Pašteta od morskih algi</h4>
+                <p>
+                    Intenzivno i specifično deluje na stomak i bokove. Formula je obogaćena ekskluzivnim morskim kompleksom za preoblikovanje, što povećava njenu efikasnost i čini je idealnom za kontrolu struka.
+                </p>
+                <p class="ingredient">
+                    Sastojci: morska voda, laminarija, spirulina, eterska ulja, ekstrakt gorke pomorandže
+                </p>
+                <h4>Piling</h4>
+                <p>
+                    Šećer i med u baršunastom puteru i neodoljiva aroma u nežnom piling-u za lice i telo od Fabbrimarine. Koža će biti meka i svilenkasta, nežno mirisna. Multifunkcionalni slatki piling je takođe idealan za tretiranje mrlja, čineći kožu svetlijom i blistavijom.
                 </p>
             </div>
 
             <div class="product-category">
-                <img src="images/body-thalataping.jpg" alt="Drenaža" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Drenaža</h3>
-                <p>
-                    Drenažni tretmani koji pomažu u eliminaciji viška tečnosti i toksina. 
-                    Smanjuju oticanje i poboljšavaju mikrocirkulaciju.
-                </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/body-chronocare.jpg" alt="Hidratacija" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Hidratacija</h3>
-                <p>
-                    Bogati hidratantni proizvodi koji neguju i mekšaju kožu tela. 
-                    Morski ekstrakti pružaju duboku hidrataciju i obnavljaju prirodnu barijeru kože.
-                </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/body-algoil.jpg" alt="Eksfolijacija" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Eksfolijacija</h3>
-                <p>
-                    Blagi ali efikasni piling proizvodi koji uklanjaju mrtve ćelije kože, 
-                    otkrivajući glatku i svetliju kožu. Poboljšavaju teksturu i apsorpciju drugih proizvoda.
-                </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/body-thalasso.jpg" alt="Čišćenje" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Čišćenje</h3>
-                <p>
-                    Proizvodi za dnevno čišćenje tela koji uklanjaju nečistoće i višak sebuma, 
-                    ostavljajući kožu čistom, svežom i pripremljenom za dalju negu.
-                </p>
-            </div>
-
-            <div class="product-category">
-                <img src="images/body-foot.jpg" alt="Nega stopala" style="width: 100%; max-width: 200px; height: auto; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Nega stopala</h3>
+                <div class="category-images">
+                    <img src="images/body-foot.jpg" alt="Nega stopala 1">
+                    <img src="images/body-stopala.webp" alt="Nega stopala 2">
+                </div>
                 <p>
                     Specijalizovani proizvodi za negu stopala koji ublažavaju umor, mekšaju 
                     kožu i sprečavaju nastanak žuljeva i pukotina.
@@ -117,7 +117,7 @@
             <p>Tel: 065/981-94-80 • 060/480-42-70 • 061/188-23-75</p>
             <p>Email: maksimovicpredrag141@gmail.com</p>
             <div class="footer-social">
-                <a href="https://www.instagram.com/alvita_pro/" target="_blank" class="footer-social-link">
+                <a href="https://www.instagram.com/fabbrimarine_rs_bih_mne_mkd/" target="_blank" class="footer-social-link">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                     </svg>
