--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,11 @@
                 <div class="qr-code-section" style="background-image: url('images/home-head-2.jpg'); background-position: center; background-repeat: repeat-x; height: 200px; padding: 1.5rem; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 0;">
                     <div style="flex: 1; display: flex; align-items: flex-end; justify-content: center; padding-bottom: 0.5rem;">
                         <div class="qr-code-wrapper">
-                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://www.instagram.com/alvita_pro/" alt="QR Code - Instagram @alvita_pro" class="qr-code">
+                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://www.instagram.com/fabbrimarine_rs_bih_mne_mkd/" alt="QR Code - Instagram @fabbrimarine_rs_bih_mne_mkd" class="qr-code">
                         </div>
                     </div>
                     <div style="flex: 1; display: flex; align-items: flex-start; justify-content: center; padding-top: 0.5rem;">
-                        <p style="font-weight: 600; color: #fff; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">@ALVITA_PRO</p>
+                        <p style="font-weight: 600; color: #fff; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">@fabbrimarine_rs_bih_mne_mkd</p>
                     </div>
                 </div>
                 
@@ -66,11 +66,11 @@
                     </p>
                     
                     <div class="social-links-inline">
-                        <a href="https://www.instagram.com/alvita_pro/" target="_blank" class="social-link-inline">
+                        <a href="https://www.instagram.com/fabbrimarine_rs_bih_mne_mkd/" target="_blank" class="social-link-inline">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                             </svg>
-                            @alvita_pro
+                            @fabbrimarine_rs_bih_mne_mkd
                         </a>
                         <a href="https://www.facebook.com/predrag.maksimovic.3956" target="_blank" class="social-link-inline">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
@@ -103,7 +103,7 @@
             <p>Tel: 065/981-94-80 • 060/480-42-70 • 061/188-23-75</p>
             <p>Email: maksimovicpredrag141@gmail.com</p>
             <div class="footer-social">
-                <a href="https://www.instagram.com/alvita_pro/" target="_blank" class="footer-social-link">
+                <a href="https://www.instagram.com/fabbrimarine_rs_bih_mne_mkd/" target="_blank" class="footer-social-link">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                     </svg>
