--- a/wellness.html
+++ b/wellness.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabbrimarine - Morska Kozmetika</title>
+    <title>Wellness i Spa - Fabbrimarine</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,51 +21,13 @@
         </nav>
     </header>
 
-    <section class="hero" style="background-image: linear-gradient(rgba(0, 102, 204, 0.6), rgba(0, 68, 153, 0.6)), url('images/hero-marine.jpg'); background-size: cover; background-position: center;">
-        <h1>Sve je počelo u moru</h1>
-        <p>Čovečanstvo potiče iz mora. Baš kao i naša kozmetika.</p>
-    </section>
-
     <main>
-        <section class="philosophy">
-            <h2>MORSKA FILOZOFIJA</h2>
-            <p>
-                Fabbri Cosmetica je vodeća kompanija u sektoru usluga lepote i wellnesa sa četrdesetogodišnjim iskustvom.
-                Istraživači u farmakološkom sektoru hrane i kozmetike proučavaju morske aktivne supstance za rešavanje svih vrsta problema, svesni njihovog značaja kao izvora rešenja za zdravlje ljudi.
-                Sa dr. Albertom Fabbrijem projekat je rađen kao specijalizovan za morsku kozmetologiju sa posebnim akcentom na jedinstvene supstance iz mora i okeana. Formule su odobrene od strane najboljih centara za sertifikaciju, kao i od Svetske Zdravstvene Organizacije. Preparati sadrže 56 vrsta dobro poznatih algi i 5 vrsta planktona kao i biserni i crveni koralni prah, ekstrakte morskog ljiljana, retke plave morske alge, šargarepe, i voćne peptide tj. proteine.
-                Ono što izdvaja kozmetiku FABBRIMARINE je potpuno inovativna metoda biomimetike (prirodna imitacija okruženja ćelije), sadržaj mikro emulzije koja ulazi sama u kožu (npr. maske) kao i mikronizovanu morsku vodu koja vrši momentalno poboljšanje, kako epiderma tako i dubokih slojeva kože.
-            </p>
-            <br />
-            <p>
-                <em>'ČOVEČANSTVO DOLAZI IZ MORA, BAŠ KAO I NAŠA KOZMETIKA.'</em>
-            </p>
-        </section>
+        <h1 class="page-title">Wellness i Spa</h1>
+        <p class="page-subtitle">Specijalizovani tretmani za opuštanje i dobrobit</p>
 
-        <section class="categories">
-            <a href="face.html" class="category-card">
-                <img src="images/face-perfectio.jpg" alt="Nega lica" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Nega Lica</h3>
-                <p>
-                    Specijalizovana linija proizvoda za negu lica koja obuhvata anti-age tretmane, 
-                    hidrataciju, osvetljivanje i pripremu kože. Naši proizvodi su prilagođeni različitim 
-                    tipovima kože - od suve i osetljive do masne i problematične.
-                </p>
-            </a>
-
-            <a href="body.html" class="category-card">
-                <img src="images/body-chronocare.jpg" alt="Nega tela" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
-                <h3>Nega Tela</h3>
-                <p>
-                    Kompletan program za negu tela koji uključuje anti-celulit tretmane, toniranje, 
-                    drenažu, hidrataciju i zaštitu od sunca. Naši proizvodi pomažu u održavanju 
-                    zdravlja i lepote vaše kože tokom cele godine.
-                </p>
-            </a>
-
-            <a href="wellness.html" class="category-card">
-                <h3>Wellness i Spa</h3>
-            </a>
-        </section>
+        <div class="product-categories">
+            <!-- Content will be added here -->
+        </div>
     </main>
 
     <footer>
