--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             </a>
 
             <a href="wellness.html" class="category-card">
+                <img src="images/wellnes-spa.jpg" alt="Wellness i Spa" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Wellness i Spa</h3>
             </a>
         </section>
