--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <section class="categories">
             <a href="face.html" class="category-card">
-                <img src="images/face-perfectio.jpg" alt="Nega lica" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
+                <img src="images/face.jpg" alt="Nega lica" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Nega Lica</h3>
                 <p>
                     Specijalizovana linija proizvoda za negu lica koja obuhvata anti-age tretmane, 
@@ -53,7 +53,7 @@
             </a>
 
             <a href="body.html" class="category-card">
-                <img src="images/body-chronocare.jpg" alt="Nega tela" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
+                <img src="images/body.jpg" alt="Nega tela" style="width: 100%; height: 200px; object-fit: cover; border-radius: 4px; margin-bottom: 1rem;">
                 <h3>Nega Tela</h3>
                 <p>
                     Kompletan program za negu tela koji uključuje anti-celulit tretmane, toniranje, 
